Changelog:
23/10/2013 - Fixed IMDB ID
29/05/2013 - Search fixed and tuned Year, for non corresponding year between MP & IMDB
14/05/2013 - Fixed Bing results string
01/04/2013 - Removed AKA titles
15/02/2012 - Removed Local IMDB function and added some details retrieving from metadata.common.imdb.com and fixed cast
17/12/2012 - Fixed IMDB search URL
18/09/2012 - Updated for the new Movieplayer site layout
16/01/2012 - Updated local IMDB string, moved Genre to official imdb.common. Tuned Bing search with (film %date%)
05/09/2011 - Tuning of year & originaltitle regexp
11/08/2011 - added "" to bing search, fixed original title and mpaa fields.
07/08/2011 - updated main scraper to use new MoviePlayer layout .
07/08/2011 - Removed optional IMDB, now it's used by default to retrieve all data except plot,tagline,outline,fanart and poster.
07/08/2011 - Commit test.
14/07/2011 - Fixed IMDb missing stuff and some cosmetics.
13/07/2011 - Added Results per page and "Year" option in settings, but it's best to keep it off.
Optimized the cache for IMDb and tmdb and other fixes
09/07/2011 - Almost completely rewritten: Bing is now the default search engine, all the infos by default are taken from movieplayer.it the user will enable the other features. 
Many, many fixes.....
07/03/2011 - Fixed Google search results.
13/02/2011 - Fixed studio's logos retrieving only one studio from imdb.
25/10/2010 - Fixed Trailers (it was deleted by mistake)
23/10/2010 - Adjusted the MP search, but Google engine is better and more reliable as it doesn't need the exact movie name. So Google is the default again and we don't hammer MP site either. Fixed the .nfo url too (tnx to Spiff)
14/10/2010 - Finally added the movieplayer.it own search (they removed the base64 encoding). Added one option in settings for Google search and anothe rone to get just one or more Posters from MP. Added Polish Translation. The version bump now to 1.1.0 :P