@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.movieplayer.it"
        name="MoviePlayer.it"
-       version="1.4.7"
+       version="1.4.8"
        provider-name="KoTiX|Gulp">
   <requires>
     <import addon="xbmc.metadata" version="2.1.0"/>
