@@ -1,4 +1,5 @@
 Changelog:
+25/03/2014 - Fixed trailer scraping
 23/10/2013 - Fixed IMDB ID
 29/05/2013 - Search fixed and tuned Year, for non corresponding year between MP & IMDB
 14/05/2013 - Fixed Bing results string
